# CheckPorts

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.specify/memory/: constitution.md
specs/001-port-app-viewer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-port-app-viewer/checklists/: requirements.md
specs/001-port-app-viewer/contracts/: cli-interface.md
src/: app_detector.rs  error.rs  main.rs  models.rs  output.rs  port_scanner.rs  process_info.rs
tests/integration/: cli_test.rs  mod.rs
tests/unit/: app_detector_test.rs  mod.rs  output_test.rs  port_scanner_test.rs  process_info_test.rs
