[package]
name = "ports"
version = "0.1.0"
edition = "2021"
description = "Display listening TCP ports and associated application information"
authors = ["checkPortCli"]
license = "MIT"

[[bin]]
name = "ports"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
libproc = "0.14"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
